--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech News</title>
+  <title>CheeseBorgers</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -12,25 +12,31 @@
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">Just Tech News</a>
+        <a href="/">CheeseBorgers</a>
       </h1>
-    <nav>
+      <nav>
         {{#if loggedIn}}
         <a href="/dashboard">dashboard</a>
         <button id="logout" class="btn-no-style">logout</button>
+        <div id="username">Logged in as:{{user.username}}
+          Points: 0
+        </div> 
+        
         {{else}}
         <a href="/login">login</a>
         {{/if}}
-    </nav>
+      </nav>
     </header>
     <main>
-      {{{ body }}} <!--placeholder for smaller template that will come later-->
+      {{{ body }}}
     </main>
     <footer>
       Thanks for visiting!
     </footer>
   </div>
+
   {{#if loggedIn}}
+  
   <script src="/javascript/logout.js"></script>
   {{/if}}
 </body>
