--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,21 +1,31 @@
-{{> post-info post}} <!-- partial -->
+<article class="post">
+  <div class="title">
+    <a href="{{content}}" target="_blank">{{title}}</a>
+    <span>({{ content}})</span>
+  </div>
+  <div class="meta">
+    {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on {{format_date created_at}}
+    |
+    <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+  </div>
+</article>
 
 {{#if loggedIn}}
 <form class="comment-form">
-    <div>
-        <textarea name="comment-body"></textarea>
-    </div>
+  <div>
+    <textarea name="comment-body"></textarea>
+  </div>
 
-    <div>
-        <button type="submit">add comment</button>
-        <button type="button" class="upvote-btn">upvote</button>
-    </div>
+  <div>
+    <button type="submit">add comment</button>
+    <button type="button" class="upvote-btn">upvote</button>
+  </div>
 </form>
 {{/if}}
 
-{{> comments post.comments}} <!--partial-->
+{{> comments post.comments}}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
-<script src="/javascript/upvote.js"></script> <!--dont forget ur scripts (but only if you need them)-->
+<script src="/javascript/upvote.js"></script>
 {{/if}}
