--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,17 @@
 <ol class="post-list">
-  {{#each posts as |post|}} <!--each loops through the array from home-routes, we can assign the variable for clarity-->
+  {{#each posts}}
   <li>
-      {{> post-info post}} <!-- partial-->
+    <article class="post">
+  <div class="title">
+    <a href="/posts/{{id}}" target="_blank">{{title}}</a>
+    <span>({{ content}})</span>
+  </div>
+  <div class="meta">
+    {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on {{format_date created_at}}
+    |
+    <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+  </div>
+</article>
   </li>
   {{/each}}
 </ol>
