--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,15 +1,15 @@
 <form class="login-form">
-    <div>
-        <label for="email-login">email:</label>
-        <input type="text" id="email-login" />
-    </div>
-    <div>
-        <label for="password-login">password:</label>
-        <input type="password" id="password-login" />
-    </div>
-    <div>
-        <button type="submit">login</button>
-    </div>
+  <div>
+    <label for="email-login">email:</label>
+    <input type="text" id="email-login" />
+  </div>
+  <div>
+    <label for="password-login">password:</label>
+    <input type="password" id="password-login" />
+  </div>
+  <div>
+    <button type="submit">login</button>
+  </div>
 </form>
 
 <form class="signup-form">
@@ -26,9 +26,13 @@
     <input type="password" id="password-signup" />
   </div>
   <div>
+    Are you an admin? 
+    <input type="checkbox" id="admin"></checkbox>
+  </div>
+  <div>
     <button type="submit">signup</button>
   </div>
+  
 </form>
-<script src="/javascript/login.js"></script> <!--the logic fromm public/javascript/login.js
-this must be an absolute file path not relative - the js code will not be sent over to the
-client at the same time as the html content-->
+
+<script src="/javascript/login.js"></script>
