--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,15 +23,56 @@ a:hover {
   color: #3486eb;
 }
 
+.toggle-btn {
+  padding: 10px 30px;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  outline: none;
+  position: relative;
+}
+
+#btn {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 110px;
+  height: 100%;
+  background: linear-gradient(to right, #fff, #3486eb);
+  transition: 0.5s;
+}
+
+.submitting {
+  width: 85%;
+  padding: 10px 30px;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  background: linear-gradient(to right, #fff, #3486eb);
+  border: 0;
+  outline: none;
+}
+
+.chech-box {
+  margin: 30px 10px 30px 0;
+}
 button {
   background-color: #225ca3;
   border: 0;
-  padding: 1%;
+  padding: 10px 30px;
   color: white;
   font-weight: bold;
   transition: background-color 0.1s;
   cursor: pointer;
   border-radius: 5px;
+  border-radius: 30px;
+}
+
+#log {
+  left: 50px;
+}
+#sign {
+  left: 450px;
 }
 
 button:hover {
@@ -61,12 +102,48 @@ textarea {
   min-height: 100px;
 }
 
+.form-box {
+  width: 380px;
+  height: 480px;
+  position: relative;
+  margin: 6% auto;
+  background: #fff;
+  padding: 5px;
+}
+
+.login-form {
+  top: 180px;
+  position: absolute;
+  width: 280px;
+  transition: 0.5s;
+}
+
 form > div {
   margin-bottom: 2%;
 }
 
-form label {
+.input-field {
+  width: 100%;
+  padding: 10px 0;
+  margin: 5px 0;
+  border-left: 0;
+  border-top: 0;
+  border-right: 0;
+  border-bottom: 0;
+  outline: none;
+  background: transparent;
+}
+
+form > label {
   display: block;
+  padding: 10px;
+  cursor: pointer;
+  border: 0;
+  outline: none;
+  position: relative;
+}
+
+.submitting {
 }
 
 .wrapper {
