--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Just Tech News</title>
+    <title>Task.io</title>
     <link rel="stylesheet" href="/public/stylesheets/style.css" />
 
   </head>
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <header>
         <h1>
-          <a href="/">JUST TECH NEWS</a>
+          <a href="/">TASK.IO</a>
         </h1>
         <nav>
           {{#if loggedIn}}
