--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,38 +1,44 @@
-<form class="login-form">
+<div class="form-box">
+  <div class="button-box">
+    <div id="btn"></div>
+    <button type="button" class="toggle-btn" onclick="login()">Log In</button>
+    <button type="button" class="toggle-btn" onclick="register()">Register</button>
+  </div>
+<form class="login-form" id="log">
   <div>
-    <label for="email-login">email:</label>
-    <input type="text" id="email-login" />
+    <label for="email-login">Email:</label>
+    <input type="text" class="input-field" id="email-login" />
   </div>
   <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
+    <label for="password-login">Password:</label>
+    <input type="password" class="input-field" id="password-login" />
   </div>
   <div>
-    <button type="submit">login</button>
+    <button type="submit" class="submitting">Login</button>
   </div>
 </form>
 
-<form class="signup-form">
+<form class="signup-form" id="sign">
   <div>
-    <label for="username-signup">username:</label>
-    <input type="text" id="username-signup" />
+    <label for="username-signup">Username:</label>
+    <input type="text" class="input-field" id="username-signup" />
   </div>
   <div>
-    <label for="email-signup">email:</label>
-    <input type="text" id="email-signup" />
+    <label for="email-signup">Email:</label>
+    <input type="text" class="input-field" id="email-signup" />
   </div>
   <div>
-    <label for="password-signup">password:</label>
-    <input type="password" id="password-signup" />
+    <label for="password-signup">Password:</label>
+    <input type="password" class="input-field" id="password-signup" />
   </div>
   <div>
     Are you an admin? 
-    <input type="checkbox" id="admin"></checkbox>
+    <input type="checkbox" class="chech-box" id="admin"></checkbox>
   </div>
   <div>
-    <button type="submit">signup</button>
+    <button type="submit" class="submitting">Signup</button>
   </div>
   
 </form>
-
+</div>
 <script src="/javascript/login.js"></script>
