function to toggle the login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -36,9 +36,9 @@
     <input type="checkbox" class="chech-box" id="admin"></checkbox>
   </div>
   <div>
-    <button type="submit" class="submitting">Signup</button>
+    <button type="submit" class="submitting">Register</button>
   </div>
   
 </form>
 </div>
-<script src="/javascript/login.js"></script>
+<script src="/public/javascript/login.js"></script>
