--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,13 +26,12 @@
     <input type="password" id="password-signup" />
   </div>
   <div>
-    Are you an admin? 
+    Are you an Admin? 
     <input type="checkbox" id="admin"></checkbox>
   </div>
   <div>
     <button type="submit">signup</button>
   </div>
-  
 </form>
 
 <script src="/javascript/login.js"></script>
