--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
-    <button type="button" class="upvote-btn">upvote</button>
+    <button type="submit">add Task</button>
+    
   </div>
 </form>
 {{/if}}
@@ -27,5 +27,5 @@
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
-
+<script src="/javascript/upvote.js"></script>
 {{/if}}
