--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,7 +26,7 @@
     <input type="password" id="password-signup" />
   </div>
   <div>
-    Are you an Admin? 
+    <label for="admin">Are you an Admin?</label>
     <input type="checkbox" id="admin"></checkbox>
   </div>
   <div>
