--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
       {{{ body }}}
     </main>
     <footer>
-      Thanks for visiting!
+      Have a productive day :-)
     </footer>
   </div>
   
