--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Task.io</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Task.io</title>
+    <link rel="stylesheet" href="/public/stylesheets/style.css" />
+  </head>
 
-<body>
-  <div class="wrapper">
-    <header>
+  <body>
+    <div class="wrapper">
+
       <h1>
-        <a href="/">Task.io</a>
+        Welcome to
+        <a href="/" class="page-title">Task.io</a>
       </h1>
-      <nav>
-          <a href="/login">Login</a>
-      </nav>
-    </header>
-    <main>
-      {{{ body }}}
-    </main>
-    <footer>
-      Stay busy! :)
-    </footer>
-  </div>
+      <h2>
+        <a href="/login" class="page-login">Login</a>
+      </h2>
 
-</body>
+      <main>
+        {{{body}}}
+      </main>
+      <footer class="greeting">
+        Stay busy! :)
+      </footer>
+    </div>
+
+  </body>
 
 </html>
