login form styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,4 +53,25 @@ form {
 }
 form label {
   display: flex;
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+form input {
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border: 1px solid black;
+  border-radius: 6px;
+  outline: none;
+}
+
+input[type="button"] {
+  width: 320px;
+  height: 35px;
+  margin-top: 20px;
+  border: none;
+  background-color: #7e89eb;
+  color: white;
+  font-size: 18px;
 }
