--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
           </h1>
           <h2>
 
-            <a href="/login" class="page-login">Login</a>
+            <a href="/login" class="page-login">Start Tasking</a>
           </h2>
 
         </div>
@@ -44,9 +44,7 @@
       <main>
         {{{body}}}
       </main>
-      <footer class="greeting">
-        Get Busy! :)
-      </footer>
+
     </div>
     <script src="/javascript/logout.js"></script>
   </body>
