big refactor on points and now you can add points WOO

--- a/views/single-team.handlebars
+++ b/views/single-team.handlebars
@@ -16,8 +16,8 @@
     </div>
 
     <div>
-        <button type="submit">add task</button>
-        <button type="button">award point</button>
+        <button type="submit" id="add-task-btn">add task</button>
+        <button type="button" id="add-point-btn">award point</button>
     </div>
 </form>
 
@@ -33,3 +33,6 @@
     </section>
     {{/each}}
 </div>
+
+<script src="/javascript/task.js"></script>
+<script src="/javascript/addPoint.js"></script>
