cool partials and formatting

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,7 @@
 <ol class="post-list">
-  {{#each teams}}
+  {{#each teams as |team|}}
   <li>
-    <article class="post">
-      <div class="title">
-        <p>{{team_name}}</p>
-        <p>{{team_description}}</p>
-      </div>
-      <div class="meta">
-        {{point_count}} point(s) by {{admin.admin_name}} on {{created_at}}
-
-        <p>{{tasks.length}} task(s)</p>
-      </div>
-    </article>
+    {{> team-info team}}
   </li>
   {{/each}}
 </ol>
