small auth issue fix

--- a/views/single-team.handlebars
+++ b/views/single-team.handlebars
@@ -1,7 +1,7 @@
 {{> team-info team}}
 
 {{#if loggedInAdmin}}
-<form id="task-form">
+<form class="task-form">
     <div>
         <textarea name="task-text"></textarea>
     </div>
