final touches on functionality

--- a/views/edit-team.handlebars
+++ b/views/edit-team.handlebars
@@ -9,7 +9,7 @@
       <p>{{team.team_description}}</p>
     </div>
     <div>
-      {{team.point_count}} {{format_plural "point" team.point_count}} by you on {{format_date team.created_at}}
+      {{team.point_count}} {{format_plural "point" team.point_count}}
       |
       <a href="/team/{{team.id}}">{{team.tasks.length}} {{format_plural "task" team.tasks.length}}</a>
     </div>
