--- a/views/partials/team-info.handlebars
+++ b/views/partials/team-info.handlebars
@@ -1,10 +1,10 @@
-<article class="post">
+<article class="team">
       <div class="title">
-        <p>{{team_name}}</p>
+        <a href="/team/{{id}}">{{team_name}}</a>
         <p>{{team_description}}</p>
       </div>
       <div class="meta">
-        {{point_count}} {{format_plural "point" point_count}} by {{admin.admin_name}} on {{format_date created_at}}
+        {{point_count}} {{format_plural "point" point_count}} | Team Leader: {{admin.admin_name}} | Tasking away since {{format_date created_at}}
 
         <p>{{tasks.length}} {{format_plural "task" tasks.length}}</p>
       </div>
