--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,84 +1,99 @@
 <!--ADMIN LOGIN -->
 
-<h1 class="sign-form-title">Sign Up or Log In here</h1>
-<form class="login-form" id="admin-login-form">
-  <div>
-    <p>Admin Login</p>
-  </div>
-  <div>
-    <label for="admin-email-login">email:</label>
-    <input type="text" id="admin-email-login" />
-  </div>
-  <div>
-    <label for="admin-password-login">password:</label>
-    <input type="password" id="admin-password-login" />
-  </div>
-  <div>
-    <button type="submit">login</button>
-  </div>
-</form>
+<div class="login-container">
+  <h1 class="sign-form-title">Sign Up or Log In Here</h1>
+  <form class="login-form" id="admin-login-form">
+    <div>
+      <p class="center">Admin Login</p>
+    </div>
+    <div>
+
+      <input type="text" id="admin-email-login" placeholder=" Email" />
+    </div>
+    <div>
+
+      <input type="password" id="admin-password-login" placeholder="Password" />
+    </div>
+    <div>
+      <button type="submit">login</button>
+    </div>
+  </form>
+</div>
+
 <!--USER LOGIN -->
-<form class="login-form" id="user-login-form">
-  <div>
-    <p>User Login</p>
-  </div>
-  <div>
-    <label for="user-email-login">email:</label>
-    <input type="text" id="user-email-login" />
-  </div>
-  <div>
-    <label for="user-password-login">password:</label>
-    <input type="password" id="user-password-login" />
-  </div>
-  <div>
-    <button type="submit">login</button>
-  </div>
-</form>
+<div class="login-container">
+  <form class="login-form" id="user-login-form">
+    <div>
+      <p class="center">User Login</p>
+    </div>
+    <div>
+
+      <input type="text" id="user-email-login" placeholder="Email" />
+    </div>
+    <div>
+
+      <input type="password" id="user-password-login" placeholder="Password" />
+    </div>
+    <div>
+      <button type="submit">login</button>
+    </div>
+  </form>
+</div>
+
 <!--ADMIN SIGN UP -->
-<form class="signup-form" id="admin-signup-form">
-  <div>
-    <p>Sign up as an Admin</p>
-  </div>
-  <div>
-    <label for="admin-username-signup">username:</label>
-    <input type="text" id="admin-username-signup" />
-  </div>
-  <div>
-    <label for="admin-email-signup">email:</label>
-    <input type="text" id="admin-email-signup" />
-  </div>
-  <div>
-    <label for="admin-password-signup">password:</label>
-    <input type="password" id="admin-password-signup" />
-  </div>
-  <div>
-    <button type="submit">signup</button>
-  </div>
-</form>
+<div class="login-container">
+  <form class="signup-form" id="admin-signup-form">
+    <div>
+      <p class="center">Sign up as an Admin</p>
+    </div>
+    <div>
+
+      <input type="text" id="admin-username-signup" placeholder="Username" />
+    </div>
+    <div>
+
+      <input type="text" id="admin-email-signup" placeholder="Email" />
+    </div>
+    <div>
+
+      <input
+        type="password"
+        id="admin-password-signup"
+        placeholder="Password"
+      />
+    </div>
+    <div>
+      <button type="submit">signup</button>
+    </div>
+  </form>
+</div>
+
 <!--USER SIGN UP -->
-<form class="signup-form" id="user-signup-form">
-  <div>
-    <p>Sign up as a User</p>
-  </div>
-  <div>
-    <label for="user-username-signup">username:</label>
-    <input type="text" id="user-username-signup" />
-  </div>
-  <div>
-    <label for="user-email-signup">email:</label>
-    <input type="text" id="user-email-signup" />
-  </div>
-  <div>
-    <label for="user-password-signup">password:</label>
-    <input type="password" id="user-password-signup" />
-  </div>
-  <div>
-    <label for="user-team-id">team id:</label>
-    <input type="number" id="user-team-id" />
-  </div>
-  <div>
-    <button type="submit">signup</button>
-  </div>
-</form>
+<div class="login-container">
+  <form class="signup-form" id="user-signup-form">
+    <div>
+      <p class="center">Sign up as a User</p>
+    </div>
+    <div>
+
+      <input type="text" id="user-username-signup" placeholder="Username" />
+    </div>
+    <div>
+
+      <input type="text" id="user-email-signup" placeholder="Email" />
+    </div>
+    <div>
+
+      <input type="password" id="user-password-signup" placeholder="Password" />
+    </div>
+    <div>
+
+      <input type="number" id="user-team-id" placeholder="Team ID" />
+    </div>
+    <div>
+      <button type="submit">signup</button>
+    </div>
+  </form>
+</div>
 
 <script src="/javascript/login.js"></script>
