--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body,
 html {
   margin: 0;
   height: 100%;
+  font-family: "Roboto", sans-serif;
 }
 
 /*welcome page styling start */
@@ -35,23 +36,29 @@ html {
 
 .signup-form {
   width: 360px;
-  height: 620px;
-  margin: auto;
-  background-color: white;
-  border-radius: 3px;
+  height: 400px;
+  margin: 2rem;
+  background-color: rgb(201, 201, 201);
+  border-radius: 10px;
+  padding: 2rem;
+  margin-left: 35%;
 }
 
 .page-login {
   text-decoration: none;
   color: #7e89eb;
+  font-size: 40px;
+  cursor: pointer;
 }
 
 .login-form {
   width: 360px;
-  height: 620px;
-  margin: auto;
-  background-color: white;
-  border-radius: 3px;
+  height: 300px;
+  margin: 2rem;
+  background-color: rgb(201, 201, 201);
+  border-radius: 10px;
+  padding: 2rem;
+  margin-left: 35%;
 }
 
 .sign-form-title {
@@ -69,17 +76,22 @@ form label {
   font-size: 18px;
 }
 
+input:focus {
+  border: 3px solid #555;
+}
 form input {
   width: 100%;
-  padding: 7px;
+  padding: 12px 20px;
+  margin: 15px 0;
   border: none;
   border: 1px solid black;
-  border-radius: 6px;
+  border-radius: 10px;
   outline: none;
+  justify-content: center;
 }
 
 button {
-  width: 320px;
+  width: 100%;
   height: 35px;
   margin-top: 20px;
   border: none;
@@ -87,3 +99,25 @@ button {
   color: white;
   font-size: 18px;
 }
+
+.center {
+  position: center;
+  font-size: 20px;
+  text-align: center;
+}
+/*Admin Home page */
+
+.team-create {
+  font-family: "Roboto", sans-serif;
+  text-align: left;
+  margin-left: 50px;
+}
+.btn {
+  cursor: pointer;
+}
+
+.team-description {
+  height: 150px;
+}
+
+/* login and signup forms*/
