--- a/views/partials/tasks.handlebars
+++ b/views/partials/tasks.handlebars
@@ -1,12 +1,14 @@
 <div>
-    {{#each this}}
+  {{#each this}}
     <section>
-        <div>
-            {{admin.admin_name}} on {{format_date created_at}}
-        </div>
-        <div>
-            {{task_text}}
-        </div>
+      <div>
+        {{admin.admin_name}}
+        on
+        {{format_date created_at}}
+      </div>
+      <div>
+        {{task_text}}
+      </div>
     </section>
-    {{/each}}
+  {{/each}}
 </div>
