--- a/views/partials/team-info.handlebars
+++ b/views/partials/team-info.handlebars
@@ -1,11 +1,22 @@
-<article class="post">
+
+ <div class="columns is-variable is-0"></div>
+  <div class="column has-text-centered">
+   
+    <article class="post">
       <div class="title">
         <p>{{team_name}}</p>
         <p>{{team_description}}</p>
       </div>
       <div class="meta">
-        {{point_count}} {{format_plural "point" point_count}} by {{admin.admin_name}} on {{format_date created_at}}
+        {{point_count}}
+        {{format_plural "point" point_count}}
+        by
+        {{admin.admin_name}}
+        on
+        {{format_date created_at}}
 
         <p>{{tasks.length}} {{format_plural "task" tasks.length}}</p>
       </div>
     </article>
+  </div>
+</div>
