--- a/views/admin-home.handlebars
+++ b/views/admin-home.handlebars
@@ -1,15 +1,16 @@
 
 <div class="form-holder">
 <section>
-  <h2 class="team-create">Create New Team</h2>
+  
 
   <form class="new-team-form" id="new-team-form">
+    <h2 class="team-create">Create New Team</h2>
     <div>
-      <label for="team-name">Team Name</label>
+      <label class="team-name" for="team-name">Team Name</label>
       <input type="text" id="team-name" name="team-name" />
     </div>
     <div>
-      <label for="team-description">Team Description</label>
+      <label class="description-team" for="team-description">Team Description</label>
       <input id="team-description" name="team-description" />
     </div>
     <button type="submit" class="btn">Create</button>
@@ -20,8 +21,11 @@
 <div class="teams-holder">
 {{#if teams.length}}
 
-<section>
-  <h2>Your Teams</h2>
+
+<section class="teams-section">
+  <h2 class="your-teams">Your Teams</h2>
+  <div class="columns"></div>
+  <div class="column">
   <ol>
     {{#each teams as |team|}}
     <li>
@@ -33,6 +37,8 @@
 </section>
 </div>
 {{/if}}
+</div>
+</div>
 </div>
 
 <script src="/javascript/add-team.js"></script>
