--- a/views/partials/team-info.handlebars
+++ b/views/partials/team-info.handlebars
@@ -1,7 +1,6 @@
+<div class="columns is-variable is-0">
+  <div class="column">
 
- <div class="columns is-variable is-0"></div>
-  <div class="column has-text-centered">
-   
     <article class="post">
       <div class="title">
         <p>{{team_name}}</p>
