--- a/views/admin-home.handlebars
+++ b/views/admin-home.handlebars
@@ -24,9 +24,9 @@
 
 <section class="teams-section">
   <h2 class="your-teams">Your Teams</h2>
-  <div class="columns"></div>
+  <div class="columns is-centered"></div>
   <div class="column">
-  <ol>
+  <ol type="1">
     {{#each teams as |team|}}
     <li>
       {{> team-info team}}
