--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,99 +1,127 @@
 <!--ADMIN LOGIN -->
+<div class="columns">
+  <div class="column">
+    <div class="login-container">
 
-<div class="login-container">
-  <h1 class="sign-form-title">Sign Up or Log In Here</h1>
-  <form class="login-form" id="admin-login-form">
-    <div>
-      <p class="center">Admin Login</p>
-    </div>
-    <div>
+      <h1 class="sign-form-title">Sign Up or Log In Here</h1>
+      <form class="login-form" id="admin-login-form">
+        <div>
+          <p class="center">Admin Login</p>
+        </div>
+        <div>
 
-      <input type="text" id="admin-email-login" placeholder=" Email" />
-    </div>
-    <div>
+          <input type="text" id="admin-email-login" placeholder=" Email" />
+        </div>
+        <div>
 
-      <input type="password" id="admin-password-login" placeholder="Password" />
+          <input
+            type="password"
+            id="admin-password-login"
+            placeholder="Password"
+          />
+        </div>
+        <div>
+          <button type="submit">login</button>
+        </div>
+      </form>
     </div>
-    <div>
-      <button type="submit">login</button>
-    </div>
-  </form>
-</div>
+  </div>
 
-<!--USER LOGIN -->
-<div class="login-container">
-  <form class="login-form" id="user-login-form">
-    <div>
-      <p class="center">User Login</p>
-    </div>
-    <div>
+  <!--USER LOGIN -->
+  <div class="column">
+    <div class="login-container">
+      <form class="login-form" id="user-login-form">
+        <div>
+          <p class="center">User Login</p>
+        </div>
+        <div>
 
-      <input type="text" id="user-email-login" placeholder="Email" />
-    </div>
-    <div>
+          <input type="text" id="user-email-login" placeholder="Email" />
+        </div>
+        <div>
 
-      <input type="password" id="user-password-login" placeholder="Password" />
+          <input
+            type="password"
+            id="user-password-login"
+            placeholder="Password"
+          />
+        </div>
+        <div>
+          <button type="submit">login</button>
+        </div>
+      </form>
     </div>
-    <div>
-      <button type="submit">login</button>
-    </div>
-  </form>
+  </div>
 </div>
 
 <!--ADMIN SIGN UP -->
-<div class="login-container">
-  <form class="signup-form" id="admin-signup-form">
-    <div>
-      <p class="center">Sign up as an Admin</p>
-    </div>
-    <div>
+<div class="columns">
+  <div class="column">
+    <div class="login-container">
+      <form class="signup-form" id="admin-signup-form">
+        <div>
+          <p class="center">Sign up as an Admin</p>
+        </div>
+        <div>
 
-      <input type="text" id="admin-username-signup" placeholder="Username" />
-    </div>
-    <div>
+          <input
+            type="text"
+            id="admin-username-signup"
+            placeholder="Username"
+          />
+        </div>
+        <div>
 
-      <input type="text" id="admin-email-signup" placeholder="Email" />
-    </div>
-    <div>
+          <input type="text" id="admin-email-signup" placeholder="Email" />
+        </div>
+        <div>
 
-      <input
-        type="password"
-        id="admin-password-signup"
-        placeholder="Password"
-      />
+          <input
+            type="password"
+            id="admin-password-signup"
+            placeholder="Password"
+          />
+        </div>
+        <div>
+          <button type="submit">signup</button>
+        </div>
+      </form>
     </div>
-    <div>
-      <button type="submit">signup</button>
-    </div>
-  </form>
-</div>
+  </div>
 
-<!--USER SIGN UP -->
-<div class="login-container">
-  <form class="signup-form" id="user-signup-form">
-    <div>
-      <p class="center">Sign up as a User</p>
-    </div>
-    <div>
+  <!--USER SIGN UP -->
+  <div class="column">
+    <div class="login-container">
+      <form class="signup-form" id="user-signup-form">
+        <div>
+          <p class="center">Sign up as a User</p>
+        </div>
+        <div>
 
-      <input type="text" id="user-username-signup" placeholder="Username" />
-    </div>
-    <div>
+          <input type="text" id="user-username-signup" placeholder="Username" />
+        </div>
+        <div>
 
-      <input type="text" id="user-email-signup" placeholder="Email" />
-    </div>
-    <div>
+          <input type="text" id="user-email-signup" placeholder="Email" />
+        </div>
+        <div>
 
-      <input type="password" id="user-password-signup" placeholder="Password" />
-    </div>
-    <div>
+          <input
+            type="password"
+            id="user-password-signup"
+            placeholder="Password"
+          />
+        </div>
+        <div>
 
-      <input type="number" id="user-team-id" placeholder="Team ID" />
+          <input type="number" id="user-team-id" placeholder="Team ID" />
+        </div>
+        <div>
+          <button type="submit">signup</button>
+        </div>
+      </form>
     </div>
-    <div>
-      <button type="submit">signup</button>
-    </div>
-  </form>
+  </div>
 </div>
 
 <script src="/javascript/login.js"></script>
