--- a/views/partials/team-info.handlebars
+++ b/views/partials/team-info.handlebars
@@ -11,6 +11,7 @@
         {{point_count}} {{format_plural "point" point_count}} | Team Leader: {{admin.admin_name}} | Tasking away since {{format_date created_at}}
 
         <p>{{tasks.length}} {{format_plural "task" tasks.length}}</p>
+        <p>{{users.length}} {{format_plural "member" users.length}}</p>
       </div>
     </article>
   </div>
